[package]
name = "boron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.tokenizer]
path = "./tokenizer"


[dependencies.parser]
path = "./parser"


[dependencies.emitter]
path = "./emitter"