[package]
name = "boron-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boron"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
tokenizer = {path = "tokenizer"}


[dependencies.tokenizer]
path = "./tokenizer"


[dependencies.parser]
path = "./parser"


[dependencies.emitter]
path = "./emitter"


[dependencies.error]
path = "./error"


[dependencies.version]
path = "./version"