[package]
name = "boron-lang"
description = "A simple, efficient, compiled programming language."
repository = "https://github.com/hobbsbros/boron.git"
authors = ["Joseph Hobbs"]
readme = "README.md"
license = "MIT"
version = "0.20.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boron"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
chrono = "0.4.0"